--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "license": "MIT",
     "devDependencies": {
         "@babel/cli": "^7.18.10",
-        "@babel/core": "^7.18.10",
-        "@babel/node": "^7.18.10",
+        "@babel/core": "^7.19.1",
+        "@babel/node": "^7.19.1",
         "@babel/plugin-proposal-optional-chaining": "^7.18.9",
-        "@babel/preset-env": "^7.18.10",
+        "@babel/preset-env": "^7.19.1",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
         "@storybook/addon-actions": "^6.5.12",
@@ -34,60 +34,61 @@
         "@storybook/react": "^6.5.12",
         "@storybook/testing-library": "^0.0.13",
         "@storybook/testing-react": "^1.3.0",
-        "@types/jest": "^28.1.7",
-        "@typescript-eslint/eslint-plugin": "^5.33.1",
-        "@typescript-eslint/parser": "^5.33.1",
+        "@types/jest": "^29.0.3",
+        "@typescript-eslint/eslint-plugin": "^5.38.0",
+        "@typescript-eslint/parser": "^5.38.0",
         "babel-loader": "^8.2.5",
         "css-loader": "^6.7.1",
-        "css-minimizer-webpack-plugin": "^4.0.0",
-        "eslint": "^8.22.0",
-        "eslint-config-airbnb": "18.x",
+        "css-minimizer-webpack-plugin": "^4.1.0",
+        "eslint": "^8.23.1",
+        "eslint-config-airbnb": "19.0.4",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.30.1",
+        "eslint-plugin-react": "^7.31.8",
         "eslint-plugin-react-hooks": "^4.6.0",
         "file-loader": "^6.2.0",
         "fork-ts-checker-webpack-plugin": "^7.2.13",
         "html-webpack-plugin": "^5.3.2",
         "is-svg": "^4.3.2",
-        "jest": "^28.1.3",
+        "jest": "^29.0.3",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
         "mini-css-extract-plugin": "^2.6.1",
-        "msw": "^0.47.2",
+        "msw": "^0.47.3",
         "msw-storybook-addon": "^1.6.3",
         "nodemon": "^2.0.20",
         "pre-commit": "^1.2.2",
         "prettier": "^2.7.1",
         "terser-webpack-plugin": "^5.3.6",
-        "ts-jest": "^28.0.8",
+        "ts-jest": "^29.0.1",
         "ts-node": "^10.9.1",
-        "typescript": "^4.7.4",
+        "typescript": "^4.8.3",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.10.0",
+        "webpack-dev-server": "^4.11.1",
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
-        "@navikt/ds-css": "^1.3.1",
-        "@navikt/ds-icons": "^1.3.1",
-        "@navikt/ds-react": "^1.3.1",
-        "@navikt/fnrvalidator": "^1.3.0",
-        "@navikt/ft-plattform-komponenter": "1.0.32",
+        "@navikt/ds-css": "^1.3.2",
+        "@navikt/ds-icons": "^1.3.2",
+        "@navikt/ds-react": "^1.3.2",
+        "@navikt/fnrvalidator": "^1.3.3",
+        "@navikt/ft-plattform-komponenter": "1.1.3",
         "@navikt/k9-array-utils": "^0.0.1",
         "@navikt/k9-date-utils": "^0.0.8",
         "@navikt/k9-form-utils": "^1.0.6",
         "@navikt/k9-http-utils": "0.0.3",
-        "@navikt/k9-period-utils": "^0.0.11",
+        "@navikt/k9-period-utils": "^0.0.12",
         "@testing-library/react": "^13.4.0",
-        "@types/react": "^18.0.17",
+        "@types/react": "^18.0.20",
         "@types/react-dom": "^18.0.6",
         "axios": "^0.27.2",
         "babel-jest": "^29.0.3",
-        "classnames": "^2.3.1",
+        "classnames": "^2.3.2",
         "cors": "^2.8.5",
+        "date-fns": "^2.29.3",
         "dayjs": "^1.11.5",
         "express": "^4.18.1",
         "jest-css-modules": "^2.1.0",
@@ -121,9 +122,10 @@
         "react-collapse": "^5.1.1",
         "react-day-picker": "^7.x",
         "react-dom": "^18.2.0",
-        "react-hook-form": "^7.34.2",
+        "react-hook-form": "^7.35.0",
         "storybook-css-modules": "^1.0.8",
-        "tsconfig-paths-webpack-plugin": "^4.0.0"
+        "tsconfig-paths-webpack-plugin": "^4.0.0",
+        "uuid": "^9.0.0"
     },
     "msw": {
         "workerDirectory": "dist"
