--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "dev": "node webpack/webpack-config.development.js",
         "api-mock": "ts-node mock/api-mock.ts",
         "majorVersion": "node ./majorVersion.js",
-        "lint": "eslint 'src/**/*.{ts,tsx,js,jsx}'",
+        "lint": "eslint --cache 'src/**/*.{ts,tsx,js,jsx}'",
+        "ts-check": "tsc --pretty --noEmit",
         "start:e2e": "nodemon mock/api-mock.ts & node webpack/webpack-config.development.js",
         "storybook": "start-storybook -p 6006 -s public",
         "build-storybook": "build-storybook"
@@ -18,11 +19,11 @@
     "author": "NAV IT",
     "license": "MIT",
     "devDependencies": {
-        "@babel/cli": "^7.18.10",
-        "@babel/core": "^7.19.1",
+        "@babel/cli": "^7.19.3",
+        "@babel/core": "^7.19.3",
         "@babel/node": "^7.19.1",
         "@babel/plugin-proposal-optional-chaining": "^7.18.9",
-        "@babel/preset-env": "^7.19.1",
+        "@babel/preset-env": "^7.19.3",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
         "@storybook/addon-actions": "^6.5.12",
@@ -34,13 +35,13 @@
         "@storybook/react": "^6.5.12",
         "@storybook/testing-library": "^0.0.13",
         "@storybook/testing-react": "^1.3.0",
-        "@types/jest": "^29.0.3",
-        "@typescript-eslint/eslint-plugin": "^5.38.0",
-        "@typescript-eslint/parser": "^5.38.0",
+        "@types/jest": "^29.1.1",
+        "@typescript-eslint/eslint-plugin": "^5.39.0",
+        "@typescript-eslint/parser": "^5.39.0",
         "babel-loader": "^8.2.5",
         "css-loader": "^6.7.1",
-        "css-minimizer-webpack-plugin": "^4.1.0",
-        "eslint": "^8.23.1",
+        "css-minimizer-webpack-plugin": "^4.2.0",
+        "eslint": "^8.24.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
@@ -52,31 +53,31 @@
         "fork-ts-checker-webpack-plugin": "^7.2.13",
         "html-webpack-plugin": "^5.3.2",
         "is-svg": "^4.3.2",
-        "jest": "^29.0.3",
+        "jest": "^29.1.2",
         "less": "^4.1.3",
         "less-loader": "^11.0.0",
         "mini-css-extract-plugin": "^2.6.1",
-        "msw": "^0.47.3",
+        "msw": "^0.47.4",
         "msw-storybook-addon": "^1.6.3",
         "nodemon": "^2.0.20",
         "pre-commit": "^1.2.2",
         "prettier": "^2.7.1",
         "terser-webpack-plugin": "^5.3.6",
-        "ts-jest": "^29.0.1",
+        "ts-jest": "^29.0.3",
         "ts-node": "^10.9.1",
-        "typescript": "^4.8.3",
+        "typescript": "^4.8.4",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.11.1",
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
-        "@navikt/ds-css": "^1.3.2",
-        "@navikt/ds-icons": "^1.3.2",
-        "@navikt/ds-react": "^1.3.2",
+        "@navikt/ds-css": "^1.3.5",
+        "@navikt/ds-icons": "^1.3.5",
+        "@navikt/ds-react": "^1.3.5",
         "@navikt/fnrvalidator": "^1.3.3",
-        "@navikt/ft-form-hooks": "^2.0.4",
-        "@navikt/ft-plattform-komponenter": "1.1.3",
+        "@navikt/ft-form-hooks": "^2.0.7",
+        "@navikt/ft-plattform-komponenter": "1.1.7",
         "@navikt/k9-array-utils": "^0.0.1",
         "@navikt/k9-date-utils": "^0.0.8",
         "@navikt/k9-http-utils": "0.0.3",
@@ -85,17 +86,17 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
-        "@types/react": "^18.0.20",
+        "@types/react": "^18.0.21",
         "@types/react-dom": "^18.0.6",
         "axios": "^0.27.2",
-        "babel-jest": "^29.0.3",
+        "babel-jest": "^29.1.2",
         "classnames": "^2.3.2",
         "cors": "^2.8.5",
         "date-fns": "^2.29.3",
         "dayjs": "^1.11.5",
         "express": "^4.18.1",
         "jest-css-modules": "^2.1.0",
-        "jest-environment-jsdom": "^29.0.3",
+        "jest-environment-jsdom": "^29.1.2",
         "lodash.throttle": "^4.1.1",
         "nav-datovelger": "^12.6.0",
         "nav-frontend-alertstriper": "^4.0.2",
@@ -125,7 +126,7 @@
         "react-collapse": "^5.1.1",
         "react-day-picker": "^7.x",
         "react-dom": "^18.2.0",
-        "react-hook-form": "^7.35.0",
+        "react-hook-form": "^7.36.1",
         "react-popper": "^2.3.0",
         "storybook-css-modules": "^1.0.8",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
