--- a/package.json
+++ b/package.json
@@ -20,50 +20,50 @@
     "license": "MIT",
     "devDependencies": {
         "@babel/cli": "^7.19.3",
-        "@babel/core": "^7.19.3",
-        "@babel/node": "^7.19.1",
+        "@babel/core": "^7.19.6",
+        "@babel/node": "^7.20.0",
         "@babel/plugin-proposal-optional-chaining": "^7.18.9",
-        "@babel/preset-env": "^7.19.3",
+        "@babel/preset-env": "^7.19.4",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
-        "@storybook/addon-actions": "^6.5.12",
-        "@storybook/addon-essentials": "^6.5.12",
-        "@storybook/addon-interactions": "^6.5.12",
-        "@storybook/addon-links": "^6.5.12",
-        "@storybook/builder-webpack5": "^6.5.12",
-        "@storybook/manager-webpack5": "^6.5.12",
-        "@storybook/react": "^6.5.12",
+        "@storybook/addon-actions": "^6.5.13",
+        "@storybook/addon-essentials": "^6.5.13",
+        "@storybook/addon-interactions": "^6.5.13",
+        "@storybook/addon-links": "^6.5.13",
+        "@storybook/builder-webpack5": "^6.5.13",
+        "@storybook/manager-webpack5": "^6.5.13",
+        "@storybook/react": "^6.5.13",
         "@storybook/testing-library": "^0.0.13",
         "@storybook/testing-react": "^1.3.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
-        "@types/jest": "^29.1.1",
-        "@types/react": "^18.0.21",
-        "@types/react-dom": "^18.0.6",
-        "@typescript-eslint/eslint-plugin": "^5.39.0",
-        "@typescript-eslint/parser": "^5.39.0",
-        "babel-jest": "^29.1.2",
-        "babel-loader": "^8.2.5",
+        "@types/jest": "^29.2.1",
+        "@types/react": "^18.0.25",
+        "@types/react-dom": "^18.0.8",
+        "@typescript-eslint/eslint-plugin": "^5.42.0",
+        "@typescript-eslint/parser": "^5.42.0",
+        "babel-jest": "^29.2.2",
+        "babel-loader": "^9.1.0",
         "css-loader": "^6.7.1",
-        "css-minimizer-webpack-plugin": "^4.2.0",
-        "eslint": "^8.24.0",
+        "css-minimizer-webpack-plugin": "^4.2.2",
+        "eslint": "^8.26.0",
         "eslint-config-airbnb": "19.0.4",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-jsx-a11y": "^6.6.1",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.31.8",
+        "eslint-plugin-react": "^7.31.10",
         "eslint-plugin-react-hooks": "^4.6.0",
         "file-loader": "^6.2.0",
         "fork-ts-checker-webpack-plugin": "^7.2.13",
-        "html-webpack-plugin": "^5.3.2",
+        "html-webpack-plugin": "^5.5.0",
         "is-svg": "^4.3.2",
-        "jest": "^29.1.2",
+        "jest": "^29.2.2",
         "jest-css-modules": "^2.1.0",
-        "jest-environment-jsdom": "^29.1.2",
+        "jest-environment-jsdom": "^29.2.2",
         "less": "^4.1.3",
-        "less-loader": "^11.0.0",
+        "less-loader": "^11.1.0",
         "mini-css-extract-plugin": "^2.6.1",
         "msw": "0.47.4",
         "msw-storybook-addon": "^1.6.3",
@@ -81,12 +81,12 @@
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
-        "@navikt/ds-css": "^1.3.5",
-        "@navikt/ds-icons": "^1.3.5",
-        "@navikt/ds-react": "^1.3.5",
+        "@navikt/ds-css": "^1.5.3",
+        "@navikt/ds-icons": "^1.5.3",
+        "@navikt/ds-react": "^1.5.3",
         "@navikt/fnrvalidator": "^1.3.3",
         "@navikt/ft-form-hooks": "^2.0.7",
-        "@navikt/ft-plattform-komponenter": "^1.2.2",
+        "@navikt/ft-plattform-komponenter": "^1.3.0",
         "@navikt/k9-array-utils": "^0.0.1",
         "@navikt/k9-date-utils": "^0.0.8",
         "@navikt/k9-http-utils": "0.0.3",
@@ -96,8 +96,8 @@
         "classnames": "^2.3.2",
         "cors": "^2.8.5",
         "date-fns": "^2.29.3",
-        "dayjs": "^1.11.5",
-        "express": "^4.18.1",
+        "dayjs": "^1.11.6",
+        "express": "^4.18.2",
         "lodash.throttle": "^4.1.1",
         "nav-datovelger": "^12.6.0",
         "nav-frontend-alertstriper": "^4.0.2",
@@ -109,7 +109,7 @@
         "nav-frontend-ekspanderbartpanel-style": "^2.0.2",
         "nav-frontend-ikoner-assets": "^3.0.1",
         "nav-frontend-ikonknapper": "^2.1.3",
-        "nav-frontend-js-utils": "^1.0.17",
+        "nav-frontend-js-utils": "^1.0.20",
         "nav-frontend-knapper": "^3.1.3",
         "nav-frontend-knapper-style": "^2.1.2",
         "nav-frontend-lenker": "^2.0.2",
@@ -127,7 +127,7 @@
         "react-collapse": "^5.1.1",
         "react-day-picker": "^7.x",
         "react-dom": "^18.2.0",
-        "react-hook-form": "^7.36.1",
+        "react-hook-form": "7.36.1",
         "react-popper": "^2.3.0",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
         "uuid": "^9.0.0"
