--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
         "test": "jest --passWithNoTests",
         "test-watch": "jest --watch",
         "start": "node ./server.js",
-        "build": "webpack --config webpack/webpack-config.production.js",
-        "dev": "node webpack/webpack-config.development.js",
+        "build": "vite build",
+        "dev": "vite dev",
+        "preview": "vite preview",
         "api-mock": "ts-node mock/api-mock.ts",
         "majorVersion": "node ./majorVersion.js",
         "lint": "eslint --cache 'src/**/*.{ts,tsx,js,jsx}'",
@@ -43,6 +44,7 @@
         "@types/react-dom": "^18.0.8",
         "@typescript-eslint/eslint-plugin": "^5.42.0",
         "@typescript-eslint/parser": "^5.42.0",
+        "@vitejs/plugin-react": "^2.2.0",
         "babel-jest": "^29.2.2",
         "babel-loader": "^9.1.0",
         "css-loader": "^6.7.1",
@@ -75,6 +77,9 @@
         "ts-jest": "^29.0.3",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.4",
+        "vite": "^3.2.4",
+        "vite-plugin-html": "^3.2.0",
+        "vite-tsconfig-paths": "^3.6.0",
         "webpack": "^5.74.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.11.1",
@@ -110,7 +115,6 @@
         "nav-frontend-ikoner-assets": "^3.0.1",
         "nav-frontend-ikonknapper": "^2.1.3",
         "nav-frontend-js-utils": "^1.0.20",
-        "nav-frontend-knapper": "^3.1.3",
         "nav-frontend-knapper-style": "^2.1.2",
         "nav-frontend-lenker": "^2.0.2",
         "nav-frontend-lenker-style": "^2.0.2",
