--- a/package.json
+++ b/package.json
@@ -46,8 +46,6 @@
         "@typescript-eslint/parser": "^5.42.0",
         "@vitejs/plugin-react": "^2.2.0",
         "babel-jest": "^29.2.2",
-        "babel-loader": "^9.1.0",
-        "css-loader": "^6.7.1",
         "css-minimizer-webpack-plugin": "^4.2.2",
         "eslint": "^8.26.0",
         "eslint-config-airbnb": "19.0.4",
@@ -57,33 +55,24 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.31.10",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "file-loader": "^6.2.0",
-        "fork-ts-checker-webpack-plugin": "^7.2.13",
         "html-webpack-plugin": "^5.5.0",
         "is-svg": "^4.3.2",
         "jest": "^29.2.2",
         "jest-css-modules": "^2.1.0",
         "jest-environment-jsdom": "^29.2.2",
         "less": "^4.1.3",
-        "less-loader": "^11.1.0",
-        "mini-css-extract-plugin": "^2.6.1",
         "msw": "0.47.4",
         "msw-storybook-addon": "^1.6.3",
         "nodemon": "^2.0.20",
         "pre-commit": "^1.2.2",
         "prettier": "^2.7.1",
         "storybook-css-modules": "^1.0.8",
-        "terser-webpack-plugin": "^5.3.6",
         "ts-jest": "^29.0.3",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.4",
         "vite": "^3.2.4",
         "vite-plugin-html": "^3.2.0",
-        "vite-tsconfig-paths": "^3.6.0",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.11.1",
-        "webpack-merge": "^5.8.0"
+        "vite-tsconfig-paths": "^3.6.0"
     },
     "dependencies": {
         "@navikt/ds-css": "^1.5.3",
