--- a/package.json
+++ b/package.json
@@ -80,16 +80,19 @@
         "@navikt/k9-http-utils": "0.0.3",
         "@navikt/k9-period-utils": "^0.0.12",
         "@popperjs/core": "^2.11.6",
+        "@storybook/builder-vite": "^0.2.5",
         "axios": "^0.27.2",
         "classnames": "^2.3.2",
         "cors": "^2.8.5",
         "date-fns": "^2.29.3",
         "dayjs": "^1.11.6",
         "express": "^4.18.2",
+        "less": "^4.1.3",
         "lodash.throttle": "^4.1.1",
         "nav-datovelger": "^12.6.0",
         "nav-frontend-core": "^6.0.1",
         "nav-frontend-js-utils": "^1.0.20",
+        "nav-frontend-knapper-style": "^2.1.2",
         "nav-frontend-skjema": "^4.0.6",
         "nav-frontend-skjema-style": "^3.0.3",
         "prop-types": "^15.8.1",
