--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
     "name": "psb-inntektsmelding-frontend",
     "version": "1.0.2",
+    "type": "module",
     "scripts": {
-        "test": "jest --passWithNoTests",
-        "test-watch": "jest --watch",
+        "test": "vitest run",
+        "test-watch": "vitest watch",
         "start": "node ./server.js",
         "build": "vite build",
         "dev": "vite dev",
@@ -55,6 +56,7 @@
         "jest": "^29.2.2",
         "jest-css-modules": "^2.1.0",
         "jest-environment-jsdom": "^29.2.2",
+        "jsdom": "^20.0.3",
         "msw": "0.47.4",
         "msw-storybook-addon": "^1.6.3",
         "nodemon": "^2.0.20",
@@ -66,7 +68,8 @@
         "typescript": "^4.8.4",
         "vite": "^3.2.4",
         "vite-plugin-html": "^3.2.0",
-        "vite-tsconfig-paths": "^3.6.0"
+        "vite-tsconfig-paths": "^3.6.0",
+        "vitest": "^0.25.3"
     },
     "dependencies": {
         "@navikt/ds-css": "^1.5.3",
@@ -74,7 +77,7 @@
         "@navikt/ds-react": "^1.5.3",
         "@navikt/fnrvalidator": "^1.3.3",
         "@navikt/ft-form-hooks": "^2.0.7",
-        "@navikt/ft-plattform-komponenter": "^1.3.0",
+        "@navikt/ft-plattform-komponenter": "^1.4.0",
         "@navikt/k9-array-utils": "^0.0.1",
         "@navikt/k9-date-utils": "^0.0.8",
         "@navikt/k9-http-utils": "0.0.3",
@@ -95,6 +98,7 @@
         "nav-frontend-knapper-style": "^2.1.2",
         "nav-frontend-skjema": "^4.0.6",
         "nav-frontend-skjema-style": "^3.0.3",
+        "nav-frontend-typografi-style": "^2.0.2",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-collapse": "^5.1.1",
