--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "author": "NAV IT",
     "license": "MIT",
     "devDependencies": {
-        "@babel/cli": "^7.19.3",
-        "@babel/core": "^7.19.6",
-        "@babel/node": "^7.20.0",
-        "@babel/plugin-proposal-optional-chaining": "^7.18.9",
-        "@babel/preset-env": "^7.19.4",
+        "@babel/cli": "^7.20.7",
+        "@babel/core": "^7.20.12",
+        "@babel/node": "^7.20.7",
+        "@babel/plugin-proposal-optional-chaining": "^7.20.7",
+        "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "@babel/preset-typescript": "^7.18.6",
         "@storybook/addon-actions": "^6.5.13",
@@ -38,25 +38,25 @@
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
-        "@types/jest": "^29.2.1",
-        "@types/react": "^18.0.25",
-        "@types/react-dom": "^18.0.8",
-        "@typescript-eslint/eslint-plugin": "^5.42.0",
-        "@typescript-eslint/parser": "^5.42.0",
-        "babel-jest": "^29.2.2",
-        "babel-loader": "^9.1.0",
-        "css-loader": "^6.7.1",
+        "@types/jest": "^29.2.6",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
+        "@typescript-eslint/eslint-plugin": "^5.48.2",
+        "@typescript-eslint/parser": "^5.48.2",
+        "babel-jest": "^29.3.1",
+        "babel-loader": "^9.1.2",
+        "css-loader": "^6.7.3",
         "css-minimizer-webpack-plugin": "^4.2.2",
-        "eslint": "^8.26.0",
+        "eslint": "^8.32.0",
         "eslint-config-airbnb": "19.0.4",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-jsx-a11y": "^6.6.1",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-jsx-a11y": "^6.7.1",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-react": "^7.31.10",
+        "eslint-plugin-react": "^7.32.1",
         "eslint-plugin-react-hooks": "^4.6.0",
         "file-loader": "^6.2.0",
-        "fork-ts-checker-webpack-plugin": "^7.2.13",
+        "fork-ts-checker-webpack-plugin": "^7.3.0",
         "html-webpack-plugin": "^5.5.0",
         "is-svg": "^4.3.2",
         "jest": "^29.2.2",
@@ -64,15 +64,15 @@
         "jest-environment-jsdom": "^29.2.2",
         "less": "^4.1.3",
         "less-loader": "^11.1.0",
-        "mini-css-extract-plugin": "^2.6.1",
-        "msw": "0.47.4",
-        "msw-storybook-addon": "^1.6.3",
+        "mini-css-extract-plugin": "^2.7.2",
+        "msw": "0.49.3",
+        "msw-storybook-addon": "^1.7.0",
         "nodemon": "^2.0.20",
         "pre-commit": "^1.2.2",
-        "prettier": "^2.7.1",
+        "prettier": "^2.8.3",
         "storybook-css-modules": "^1.0.8",
         "terser-webpack-plugin": "^5.3.6",
-        "ts-jest": "^29.0.3",
+        "ts-jest": "^29.0.5",
         "ts-node": "^10.9.1",
         "typescript": "^4.8.4",
         "webpack": "^5.74.0",
@@ -81,12 +81,12 @@
         "webpack-merge": "^5.8.0"
     },
     "dependencies": {
-        "@navikt/ds-css": "^1.5.3",
-        "@navikt/ds-icons": "^1.5.3",
-        "@navikt/ds-react": "^1.5.3",
+        "@navikt/ds-css": "2.0.12",
+        "@navikt/ds-icons": "2.0.12",
+        "@navikt/ds-react": "2.0.12",
         "@navikt/fnrvalidator": "^1.3.3",
-        "@navikt/ft-form-hooks": "^2.0.7",
-        "@navikt/ft-plattform-komponenter": "^1.3.0",
+        "@navikt/ft-form-hooks": "^3.2.10",
+        "@navikt/ft-plattform-komponenter": "^1.4.6",
         "@navikt/k9-array-utils": "^0.0.1",
         "@navikt/k9-date-utils": "^0.0.8",
         "@navikt/k9-http-utils": "0.0.3",
@@ -127,7 +127,7 @@
         "react-collapse": "^5.1.1",
         "react-day-picker": "^7.x",
         "react-dom": "^18.2.0",
-        "react-hook-form": "7.36.1",
+        "react-hook-form": "7.41.5",
         "react-popper": "^2.3.0",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
         "uuid": "^9.0.0"
