--- a/package.json
+++ b/package.json
@@ -87,10 +87,11 @@
         "@navikt/fnrvalidator": "^1.3.3",
         "@navikt/ft-form-hooks": "^3.2.10",
         "@navikt/ft-plattform-komponenter": "^1.4.6",
-        "@navikt/k9-array-utils": "^0.0.1",
-        "@navikt/k9-date-utils": "^0.0.8",
-        "@navikt/k9-http-utils": "0.0.3",
-        "@navikt/k9-period-utils": "^0.0.12",
+        "@navikt/k9-array-utils": "^1.0.1",
+        "@navikt/k9-date-utils": "^0.1.0",
+        "@navikt/k9-form-utils": "2.0.0",
+        "@navikt/k9-http-utils": "1.0.2",
+        "@navikt/k9-period-utils": "^1.0.1",
         "@popperjs/core": "^2.11.6",
         "axios": "^0.27.2",
         "classnames": "^2.3.2",
